# geo-utils

./: .gitignore  README.md  __init__.py  geOrchestra.py  pyproject.toml
console/: __init__.py  console.py
geOrchestra/: __init__.py  geOrchestra.py
geOrchestra/console/: __init__.py  console.py
geOrchestra/meta_apis/: __init__.py  gn_api.py  importThesauri.sh  meta_manipulation.py  metadata.py  recup_POCs.sh
gs/: README.md  create_datastore_from_csv.py  create_layers_from_csv.py  list_datastore.csv  list_layers.csv
ldap/: README.md  creatorldif.py  neworgs.csv  newroles.csv  newuser_groups.csv  newusers.csv
meta_apis/: __init__.py  ask_gn_api.py
meta_apis/config/: thesauri.csv
proxy/: README.md  proxy-links.py  proxy_links.py
proxy/templates/: mapstore2.tpl  security-proxy.tpl
